# SimpleProtonPrefixLocator

./: index.html  package.json
scripts/: build.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: binary_vdf_parser.rs  lib.rs  main.rs  proton_app.rs  utils.rs  vdf_parser.rs
